<resources>
    <string name="app_name">CityGuide</string>
    <string name="logo_name">Get A Way!</string>
    <string name="slogan_name">We will help you to find your way!</string>

    <!-- Strings for On Boarding Screen -->
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

<!--    Strings for Dashboar-->
    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

<!-- Titles and Descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations" >Most Viewed</string>
    <string name="categories" >Categories</string>
    <string name="view_all" >View All</string>
    <string name="search_text" >Search...</string>

    <!-- Main menu -->


    <string name="home" >Home</string>
    <string name="search" >Search</string>
    <string name="all_categories" >All Categories</string>
    <string name="add_missing_places" >Add missing places</string>
    <string name="logout" >Logout</string>
    <string name="login" >Login</string>
    <string name="profile" >Profile</string>
    <string name="share" >Share</string>
    <string name="rate_us" >Rate Us</string>

</resources>